pkg/ibmvpc/examples/out/analysis_out/sg_testing1_new_all_vpcs_subnetsBased_withPGW.txt
Subnet connectivity for VPC test-vpc1-ky
subnet1-ky => Public Internet (all ranges) : All Connections
subnet1-ky => subnet2-ky : All Connections
subnet1-ky => subnet3-ky : All Connections
subnet2-ky => subnet1-ky : All Connections
subnet2-ky => subnet3-ky : All Connections
subnet3-ky => subnet1-ky : All Connections
subnet3-ky => subnet2-ky : All Connections
